--- a/style.css
+++ b/style.css
@@ -13,11 +13,12 @@ body {
     flex-direction: row;
     height: 100%;
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .background-sidebar {
     background-color: green;
-    background-image: url("images/leaves.jpg");
+    background-image: url("images/leaves_2.jpg");
     background-position: center;
     background-size: cover;
     min-width: 300px;
@@ -57,6 +58,17 @@ body {
     height: 30px;
 }
 
+.header {
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    padding-left: 45px;
+    padding-bottom: 30px;
+    font-weight: bold;
+    font-size: 1.25rem;
+    box-sizing: border-box;
+}
+
 .main-content {
     display: flex;
     flex-direction: column;
@@ -70,7 +82,12 @@ body {
     height: 30vh;
 }
 
+.footer {
+
+}
+
 .header,
 .footer {
-    flex-grow: 1;
+    flex: 1 0;
+    min-height: 35vh;
 }
