--- a/style.css
+++ b/style.css
@@ -58,11 +58,14 @@ body {
     height: 30px;
 }
 
+.background-credit > a {
+    color: white
+}
+
 .header {
     display: flex;
     flex-direction: column;
     justify-content: end;
-    padding-left: 45px;
     padding-bottom: 30px;
     font-weight: bold;
     font-size: 1.25rem;
@@ -83,11 +86,28 @@ body {
 }
 
 .footer {
+    padding-top: 30px;
+    box-sizing: border-box;
+}
 
+.footer > button {
+    border-style: none;
+    border-radius: 5px;
+    background-color: #672d43;
+    color: white;
+    width: 240px;
+    height: 50px;
+    font-size: 1.1rem;
+    font-weight: bold;
+}
+
+.footer > p {
+    font-size: 1.2rem;
 }
 
 .header,
 .footer {
     flex: 1 0;
     min-height: 35vh;
+    padding-left: 45px;
 }
