--- a/style.css
+++ b/style.css
@@ -83,6 +83,26 @@ body {
 .form-container {
     background-color: white;
     height: 30vh;
+    padding: 0 45px;
+}
+
+form {
+    display: flex;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+    width: 100%;
+}
+
+.form-row {
+    display: flex;
+    width: 100%;
+    gap: 40px
+}
+
+.form-field {
+    display: flex;
+    flex-direction: column;
+    width: 33%;
 }
 
 .footer {
