--- a/style.css
+++ b/style.css
@@ -124,6 +124,11 @@ input:focus {
     outline: none;
 }
 
+input:invalid {
+    border: 1px solid red;
+    outline: none;
+}
+
 .footer {
     padding-top: 30px;
     box-sizing: border-box;
