--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ body {
     background-color: white;
     height: 30vh;
     padding: 0 45px;
+    box-shadow:1px 1px 10px rgba(0, 0, 0, 0.1);
 }
 
 form {
@@ -96,7 +97,8 @@ form {
 .form-row {
     display: flex;
     width: 100%;
-    gap: 40px
+    gap: 40px;
+    margin-bottom: 20px;
 }
 
 .form-field {
@@ -113,8 +115,7 @@ label {
 input {
     border: 1px solid #E5E7EB;
     border-radius: 5px;
-    padding: 5px;
-    margin-bottom: 20px;
+    padding: 5px;  
     font-size: 1rem;
 }
 
@@ -127,6 +128,17 @@ input:focus {
 input:invalid {
     border: 1px solid red;
     outline: none;
+}
+
+.invalid-input {
+    margin-top: 2px;
+    font-size: 0.8rem;
+    display: none;
+    color: red;
+}
+
+input:invalid + .invalid-input {
+    display: block;
 }
 
 .footer {
@@ -143,6 +155,7 @@ input:invalid {
     height: 50px;
     font-size: 1.1rem;
     font-weight: bold;
+    box-shadow:1px 1px 10px rgba(0, 0, 0, 0.3);
 }
 
 .footer > button:hover {
