Formatting and removed unused files
Log in link color changed to match button.
Script file removed as it was unused.

--- a/style.css
+++ b/style.css
@@ -170,6 +170,10 @@ input:invalid + .invalid-input {
     font-size: 1.2rem;
 }
 
+p > a {
+    color: #672d43;
+}
+
 .header,
 .footer {
     flex: 1 0;
